--- a/.config/lemonbuddy/testing/i3.conf
+++ b/.config/lemonbuddy/testing/i3.conf
@@ -3,8 +3,8 @@ monitor = eDP-1
 height = 35
 lineheight = 4
 dock = false
-;offset_x = 60
-;offset_y = 15
+;offset-x = 60
+;offset-y = 15
 width = 100%
 
 background = #222222
@@ -15,8 +15,8 @@ border-bottom = 2
 border-bottom-color = #333333
 
 spacing = 1
-padding_left = 2
-padding_right = 2
+padding-left = 2
+padding-right = 2
 
 font-0 = envypn-regular:size=10;0
 font-1 = Siji:pixelsize=10;0
@@ -30,8 +30,8 @@ monitor = HDMI-1
 height = 35
 lineheight = 4
 dock = false
-;offset_x = 60
-;offset_y = 15
+;offset-x = 60
+;offset-y = 15
 width = 100%
 
 background = ${bar/top.background}
@@ -46,8 +46,8 @@ font-1 = ${bar/top.font-1}
 font-2 = ${bar/top.font-2}
 
 spacing = ${bar/top.spacing}
-padding_left = ${bar/top.padding_left}
-padding_right = ${bar/top.padding_right}
+padding-left = ${bar/top.padding_left}
+padding-right = ${bar/top.padding_right}
 
 modules-left = i3
 modules-right = date
@@ -57,8 +57,8 @@ monitor = HDMI-1
 height = 35
 lineheight = 4
 dock = false
-;offset_x = 60
-;offset_y = 15
+;offset-x = 60
+;offset-y = 15
 width = 100%
 bottom = true
 
@@ -74,8 +74,8 @@ font-1 = ${bar/top.font-1}
 font-2 = ${bar/top.font-2}
 
 spacing = ${bar/top.spacing}
-padding_left = ${bar/top.padding_left}
-padding_right = ${bar/top.padding_right}
+padding-left = ${bar/top.padding_left}
+padding-right = ${bar/top.padding_right}
 
 modules-center = mpd
 
@@ -84,15 +84,16 @@ modules-center = mpd
 type = internal/i3
 format = <label-state>
 
-workspace_icon-0 = term;
-workspace_icon-1 = web;
-workspace_icon-2 = code;
-workspace_icon-3 = music;
-workspace_icon-4 = irssi;
-workspace_icon-default = 
+ws-icon-0 = term;
+ws-icon-1 = web;
+ws-icon-2 = code;
+ws-icon-3 = music;
+ws-icon-4 = irssi;
+ws-icon-default = 
 
-local_workspaces = true
-workspace_name_strip_nchars = 2
+pin-workspaces = true
+wsname-maxlen = 2
+index-sort = true
 
 label-focused = %index% %icon%
 label-focused-background = #3f3f3f
@@ -132,8 +133,8 @@ icon-seekf = 
 icon-random = 
 icon-repeat = 
 
-toggle_on-foreground = #fba922
-toggle_off-foreground = #66
+toggle-on-foreground = #fba922
+toggle-off-foreground = #66
 
 bar-progress-width = 15
 bar-progress-indicator = 
