--- a/.config/lemonbuddy/testing/config
+++ b/.config/lemonbuddy/testing/config
@@ -77,10 +77,10 @@ linecolor = ${bar/top.background}
 
 spacing = 3
 lineheight = 14
-;padding_left = 5
-;padding_right = 2
-module_margin_left = 3
-module_margin_right = 3
+;padding-left = 5
+;padding-right = 2
+module-margin-left = 3
+module-margin-right = 3
 
 font-0 = NotoSans-Regular:size=8;0
 font-1 = MaterialIcons:size=10;0
@@ -103,10 +103,10 @@ linecolor = ${bar/bottom.background}
 
 spacing = 3
 lineheight = 2
-;padding_left = 0
-padding_right = 4
-module_margin_left = 0
-module_margin_right = 6
+;padding-left = 0
+padding-right = 4
+module-margin-left = 0
+module-margin-right = 6
 
 ; font-idx = font:size=N;offsetY
 font-0 = NotoSans-Regular:size=8;0
@@ -133,10 +133,10 @@ linecolor = ${bar/external_bottom.background}
 
 spacing = 3
 lineheight = 2
-;padding_left = 0
-padding_right = 3
-module_margin_left = 0
-module_margin_right = 6
+;padding-left = 0
+padding-right = 3
+module-margin-left = 0
+module-margin-right = 6
 
 font-0 = NotoSans-Regular:size=8;0
 font-1 = Unifont:size=6;-3
@@ -187,7 +187,7 @@ type = internal/battery
 
 ;battery = BAT0
 ;adapter = ADP1
-full_at = 99
+full-at = 99
 
 ; Available tags:
 ;   <label-charging> (default)
@@ -258,19 +258,19 @@ animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
-animation-charging-framerate_ms = 750
+animation-charging-framerate-ms = 750
 
 [module/bspwm]
 type = internal/bspwm
 
-; workspace_icon-[0-9]+ = label;icon
-; workspace_icon-default = icon
-workspace_icon-0 = term;
-workspace_icon-1 = web;
-workspace_icon-2 = code;
-workspace_icon-3 = music;
-workspace_icon-4 = irssi;
-workspace_icon-default = 
+; ws-icon-[0-9]+ = label;icon
+; ws-icon-default = icon
+ws-icon-0 = term;
+ws-icon-1 = web;
+ws-icon-2 = code;
+ws-icon-3 = music;
+ws-icon-4 = irssi;
+ws-icon-default = 
 
 ; Available tags:
 ;   <label-state> (default) - gets replaced with <label-(active|urgent|occupied|empty)>
@@ -351,14 +351,14 @@ label-private-padding = ${module/bspwm.label-monocle-padding}
 [module/i3]
 type = internal/i3
 
-; workspace_icon-[0-9]+ = label;icon
-; workspace_icon-default = icon
-workspace_icon-0 = 1;
-workspace_icon-1 = 2;
-workspace_icon-2 = 3;
-workspace_icon-3 = 4;
-workspace_icon-4 = 5;
-workspace_icon-default = 
+; ws-icon-[0-9]+ = label;icon
+; ws-icon-default = icon
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-default = 
 
 ; Available tags:
 ;   <label-state> (default) - gets replaced with <label-(focused|unfocused|visible|urgent)>
@@ -442,44 +442,44 @@ interval = 0.5
 ;   <label> (default)
 ;   <bar-load>
 ;   <ramp-load>
-;   <ramp-load_per_core>
-format = <label> <ramp-load_per_core>
+;   <ramp-coreload>
+format = <label> <ramp-coreload>
 
 ; Available tokens:
 ;   %percentage% (default)
 label = CPU
 
-; Required if <ramp-core_load> is used
-ramp-load_per_core-0 = ▁
-ramp-load_per_core-0-font = 2
-ramp-load_per_core-0-foreground = #55aa55
-ramp-load_per_core-1 = ▂
-ramp-load_per_core-1-font = 2
-ramp-load_per_core-1-foreground = #55aa55
-ramp-load_per_core-2 = ▃
-ramp-load_per_core-2-font = 2
-ramp-load_per_core-2-foreground = #55aa55
-ramp-load_per_core-3 = ▄
-ramp-load_per_core-3-font = 2
-ramp-load_per_core-3-foreground = #55aa55
-ramp-load_per_core-4 = ▅
-ramp-load_per_core-4-font = 2
-ramp-load_per_core-4-foreground = #f5a70a
-ramp-load_per_core-5 = ▆
-ramp-load_per_core-5-font = 2
-ramp-load_per_core-5-foreground = #f5a70a
-ramp-load_per_core-6 = ▇
-ramp-load_per_core-6-font = 2
-ramp-load_per_core-6-foreground = #ff5555
-ramp-load_per_core-7 = █
-ramp-load_per_core-7-font = 2
-ramp-load_per_core-7-foreground = #ff5555
+; Required if <ramp-coreload> is used
+ramp-coreload-0 = ▁
+ramp-coreload-0-font = 2
+ramp-coreload-0-foreground = #55aa55
+ramp-coreload-1 = ▂
+ramp-coreload-1-font = 2
+ramp-coreload-1-foreground = #55aa55
+ramp-coreload-2 = ▃
+ramp-coreload-2-font = 2
+ramp-coreload-2-foreground = #55aa55
+ramp-coreload-3 = ▄
+ramp-coreload-3-font = 2
+ramp-coreload-3-foreground = #55aa55
+ramp-coreload-4 = ▅
+ramp-coreload-4-font = 2
+ramp-coreload-4-foreground = #f5a70a
+ramp-coreload-5 = ▆
+ramp-coreload-5-font = 2
+ramp-coreload-5-foreground = #f5a70a
+ramp-coreload-6 = ▇
+ramp-coreload-6-font = 2
+ramp-coreload-6-foreground = #ff5555
+ramp-coreload-7 = █
+ramp-coreload-7-font = 2
+ramp-coreload-7-foreground = #ff5555
 
 ; Required if <bar-total_load> is used
-;bar-total_load-width = 10
-;bar-total_load-indicator = |
-;bar-total_load-fill = =
-;bar-total_load-empty = =
+;bar-total-load-width = 10
+;bar-total-load-indicator = |
+;bar-total-load-fill = =
+;bar-total-load-empty = =
 
 [module/date]
 type = internal/date
@@ -489,7 +489,7 @@ interval = 5
 ; if date_detailed is defined, clicking the area will toggle between formats
 ; if you want to use lemonbar tags here you need to use %%{...}
 date = %%{F#888}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
-date_detailed = %%{F#888}%A, %d %B %Y%  %%{F#fff}%H:%M%%{F#666}:%%{F#fba922}%S%%{F-}
+date-detailed = %%{F#888}%A, %d %B %Y%  %%{F#fff}%H:%M%%{F#666}:%%{F#fba922}%S%%{F-}
 
 ; Seconds to sleep between updates
 ;interval = 1.0
@@ -609,8 +609,8 @@ icon-repeat = 
 ;icon-repeatone = 🔂
 
 ; Used to display the state of random/repeat/repeatone
-toggle_on-foreground =
-toggle_off-foreground = #66fafafa
+toggle-on-foreground =
+toggle-off-foreground = #66fafafa
 
 ; Required if <bar-progress> is used
 bar-progress-width = 45
@@ -636,7 +636,7 @@ interval = 2.0
 ; Seconds to sleep between connectivity tests
 ; A value of 0 disables the testing
 ; Default- 0
-;connectivity_test_interval = 10
+;connectivity-test-interval = 10
 
 ; Available tags:
 ;   <label-connected> (default)
@@ -696,7 +696,7 @@ animation-packetloss-0 = 
 animation-packetloss-0-foreground = #ffa64c
 animation-packetloss-1 = 
 animation-packetloss-1-foreground = ${bar/top.foreground}
-animation-packetloss-framerate_ms = 500
+animation-packetloss-framerate-ms = 500
 
 [module/wired-network]
 type = internal/network
@@ -709,7 +709,7 @@ interval = 2.0
 ; Seconds to sleep between connectivity tests
 ; A value of 0 disables the testing
 ; Default- 0
-;connectivity_test_interval = 0
+;connectivity-test-interval = 0
 
 ; Available tags:
 ;   <label-connected> (default)
@@ -756,9 +756,9 @@ label-connected =    %{T3}%local_ip%%{T-}
 ;type = internal/rtorrent
 ;
 ;script = /home/jaagr/var/github/jaagr/lemonbuddy/scripts/torrents.sh
-;rtorrent_session_dir = /home/jaagr/.cache/rtorrent
-;display_count = 2
-;title_maxlen = 30
+;rtorrent-session-dir = /home/jaagr/.cache/rtorrent
+;display-count = 2
+;title-maxlen = 30
 ;
 ;; Available tags:
 ;;   <label> (default)
@@ -790,12 +790,12 @@ type = internal/volume
 
 ; Use the following command to list available mixer controls:
 ; $ amixer scontrols | sed -nr "s/.*'([[-alnum-]]+)'.*/\1/p"
-speaker_mixer = Speaker
-headphone_mixer = Headphone
+speaker-mixer = Speaker
+headphone-mixer = Headphone
 
 ; Use the following command to list available device controls
 ; $ amixer controls | sed -r "/CARD/\!d; s/.*=([0-9]+).*name='([^']+)'.*/printf '%3.0f- %s\n' '\1' '\2'/e" | sort
-headphone_control_numid = 9
+headphone-control-numid = 9
 
 ; Available tags:
 ;   <label-volume> (default)
